--- a/modules/module-ts-publish/package.json
+++ b/modules/module-ts-publish/package.json
@@ -2,14 +2,15 @@
   "name": "module-ts",
   "version": "0.1.0",
   "license": "MIT",
-  "private": true,
-  "main": "dist/index.js",
-  "type": "module",
+  "main": "dist/cjs/index.js",
+  "module": "dist/index.js",
+  "typings": "types/index.d.ts",
   "types": "types/index.d.ts",
   "files": ["dist"],
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
+    "prepublish": "npm run build"
   },
   "devDependencies": {
     "tslint": "^6.1.3",
