--- a/modules/module-ts-use/package.json
+++ b/modules/module-ts-use/package.json
@@ -2,17 +2,18 @@
   "name": "module-ts-use",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "start": "tsc && node dist/index.js"
   },
   "devDependencies": {
+    "module-ts": "link:../module-ts",
     "tslint": "^6.1.3",
     "typescript": "^4.0.2"
   },
-  "dependencies": {
-    "@types/lodash": "^4.14.161",
-    "lodash": "^4.17.20",
-    "module-ts": "../module-ts"
-  }
+  "peerDependencies": {
+    "module-ts": "0.1.0"
+  },
+  "dependencies": {}
 }
