--- a/clean-architecture/proj-application/package.json
+++ b/clean-architecture/proj-application/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proj-domain",
+  "name": "proj-application",
   "version": "0.1.0",
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
@@ -16,13 +16,12 @@
     "person": "./dist/esm/person/index.js"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start": "npm run build && node dist/esm/index"
+    "build": "tsc -p tsconfig.json"
   },
+  "dependencies": {},
   "devDependencies": {
-    "proj-common": "link:../proj-common",
+    "proj-domain": "link:../proj-domain",
     "tslint": "^6.1.3",
     "typescript": "^4.0.2"
-  },
-  "dependencies": {}
+  }
 }
